# paquete_regresion_hugo

./: README.md  pyproject.toml
src/paquete_regresion_hugo/: proyecto7.py
