[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paquete_regresion_hugo"
version = "0.0.2"
authors = [
  { name="Hugo Fonseca", email="hugofonseca@usantotomas.edu.co" },
]
description = "Paquete de regresion para el proyecto 7 de la clase de ML"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zack0712/paquete_regresion_hugo"
"Bug Tracker" = "https://github.com/zack0712/paquete_regresion_hugo/issues"
